2003-10-25  Wakaba  <w@suika.fam.cx>

	* livehttpheaders.dtd.in: Sync with main package 0.8.

2003-10-25  Wakaba  <wakaba@suika.fam.cx>

	* registerComponent.html: Fix typo.

2003-10-25  Wakaba  <w@suika.fam.cx>

	* livehttpheaders.dtd.in, PageInfo.dtd.in: Sync with original 0.7.
	* registerComponent.html: New.

2003-07-06  Wakaba  <w@offweb.ddo.jp>

	* contents.rdf, livehttpheaders.dtd, PageInfo.dtd: Removed.
	* Makefile, contents.pdf.in, livehttpheaders.dtd.in, PageInfo.dtd.in: New files.

2003-07-05  Wakaba  <w@suika.fam.cx>

	* livehttpheaders.dtd: Sync with 0.6.
	* PageInfo.dtd: New dtd.  Sync with 0.6.

2003-04-30  Wakaba  <w@offweb.ddo.jp>

	* livehttpheaders.dtd: Change japanese translation of livehttpheaders.replay.post.