@@ -1,0 +1,4 @@
+release
+install-res.en.inf
+install.js
+livehttpheaders-ja.xpi
