@@ -1,3 +1,7 @@
+2003-12-22  Wakaba  <wakaba@suika.fam.cx>
+
+	* .cvsignore: New file.
+
 2003-10-25  Wakaba  <w@suika.fam.cx>
 
 	* livehttpheaders.dtd.in: Sync with main package 0.8.
